@@ -18,6 +18,7 @@ aTunes 2.2.0
 - Last.fm cache simplified to use only one ehcache cache
 - Support for tray icons in Mac OS X
 - Added player menu with key shortcuts to playback action
+- FIX: Use last.fm API to obtain last.fm loved tracks
 
 aTunes 2.1.1
 ------------
